update env and server file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-ACCOUNT_SID=
-API_KEY=
-API_KEY_SECRET=
-PUSH_CREDENTIAL_SID=
-APP_SID=
+ACCOUNT_SID=ACb65462fd7f722342fe003c78abdf1af4
+API_KEY=SK6d082ad6ebbd427cd2ad88986ab720c3
+API_KEY_SECRET=q6OoimztJ79jdEtHzB4QSM1z2nnJMU73
+IOS_PUSH_CREDENTIAL_SID=CR307accda22bf444e4d2315a7572f362a
+ANDROID_PUSH_CREDENTIAL_SID=
+APP_SID=APe89d1938ad088ae2a213cf66f3c617c2
+
